--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,32 @@
-body {
-  margin: 0;
+
+html, body {
+  height: 100%;
+  margin: auto;
   padding: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-align: center;
+  background-color: black;
 }
+
+#main {
+  background: url("photos/elk.jpg"); 
+  opacity: 0.5;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  object-fit: contain;
+  height: 100%;
+  width: 100%;
+}
+
+#root {
+  background-color: aliceblue;
+}
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
