--- a/src/App.css
+++ b/src/App.css
@@ -266,12 +266,17 @@
   }
 }
 
+/* IMPORTANT PEOPLE STYLES */
+
 .role-title, .name-and-headshot {
   font-family: 'Great Vibes', cursive;
+  padding-right: 0;
+  padding-left: 0;
 }
 
 .imp-ppl-headshots {
   margin: 1em;
+
 }
 
 .imp-ppl-headshot {
@@ -279,9 +284,13 @@
 }
 
 .imp-ppl-headshot:hover {
-  /* width: 120px;
-  height: 120px; */
   transform: scale(1)
+}
+
+@media only screen and (max-width: 600px) {
+  .imp-ppl-headshot {
+    transform: scale(0.7);
+  }
 }
 
 /* COUNTDOWN STYLES */
@@ -366,11 +375,98 @@
 
 }
 
+@media only screen and (max-width: 410px) {
+  #countdown {
+    max-width: 231px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%) rotate(45deg);
+    padding: 0;
+    list-style: none;
+  }
+
+  #countdown li {
+    display: table;
+    text-align: center;
+    float: left;
+    background: rgb(255, 255, 255, 0.4);
+    color: #000000;
+    margin: 1px;
+    width: 75px;
+    height: 75px;
+  }
+
+  #countdown li:nth-child(3) {
+    clear: left;
+    margin-left: 77px;
+  }
+
+
+  #countdown li div {
+    transform: rotate(-45deg);
+    display: table-cell;
+    vertical-align: middle;
+    font-size: 0.8rem;
+  }
+
+  #countdown li div span {
+    display: block;
+    font-size: 1.5rem;
+    color: #000000;
+  }
+
+}
+
 /* RSVP styles */
 
+.form-container {
+  background-color: #000;
+}
+
 .form-wrapper {
+  background-image: url("photos/elk.jpg"); 
+  opacity: 0.5;
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  height: 100%;
   width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  overflow-y: auto;
+  
+}
+
+#rsvp-form {
+  width: 75%;
   text-align: left;
   max-width: 800px;
   padding: 2em;
+  color: azure;
 }
+
+.col-sm-2 {
+  padding-top: 0;
+}
+
+.form-control,
+.custom-select {
+  background-color: rgb(255, 255, 255, 0.1);
+  color: white;
+}
+
+.form-control:hover,
+.custom-select:hover {
+  background-color: rgb(255, 255, 255, 0.7);
+}
+
+/* .form-control::-webkit-input-placeholder,
+.form-control::-webkit-input-placeholder,
+.form-control:-ms-input-placeholder,
+.form-control::-ms-input-placeholder,
+.form-control::placeholder {
+  color: white;
+} */
